--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.graphbi</groupId>
-	<artifactId>sql2neo</artifactId>
+	<artifactId>rdb2graph</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<dependencies>
