--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,14 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.1</version>
+				<configuration>
+					<mainClass>org.graphbi.rdb2graph.TransformerApp</mainClass>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
