--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,9 @@
 				<version>1.1</version>
 				<configuration>
 					<mainClass>org.graphbi.rdb2graph.TransformerApp</mainClass>
+					<arguments>
+						<argument>cfg/config.xml</argument>
+					</arguments>
 				</configuration>
 			</plugin>
 		</plugins>
