--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
 	<groupId>org.graphbi</groupId>
 	<artifactId>rdb2graph</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
 	<dependencies>
 		<dependency>
