--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 		<dependency>
 			<groupId>org.apache.ddlutils</groupId>
 			<artifactId>ddlutils</artifactId>
-			<version>1.0</version>
+			<version>1.1</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
@@ -26,6 +26,11 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
+		</dependency>
+		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>sqljdbc4</artifactId>
+			<version>4.0</version>
 		</dependency>
 	</dependencies>
 
@@ -46,9 +51,9 @@
 				<version>1.1</version>
 				<configuration>
 					<mainClass>org.graphbi.rdb2graph.TransformerApp</mainClass>
-<!-- 					<arguments> -->
-<!-- 						<argument>config.xml</argument> -->
-<!-- 					</arguments> -->
+					<!-- <arguments> -->
+					<!-- <argument>config.xml</argument> -->
+					<!-- </arguments> -->
 				</configuration>
 			</plugin>
 		</plugins>
