--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
 				<artifactId>exec-maven-plugin</artifactId>
 				<version>1.1</version>
 				<configuration>
-					<mainClass>org.graphbi.rdb2graph.TransformerApp</mainClass>
+					<mainClass>org.graphbi.rdb2graph.RDB2Graph</mainClass>
 					<!-- <arguments> -->
 					<!-- <argument>config.xml</argument> -->
 					<!-- </arguments> -->
