added opgraph store to config

--- a/src/main/resources/sakila-sample-config.properties
+++ b/src/main/resources/sakila-sample-config.properties
@@ -1,31 +1,42 @@
-#########################
-# Datasource definition #
-#########################
+###############################
+# Relational Store Definition #
+###############################
 
 # type - relational database system (rdbs) identifer (mysql, mssql)
-datasource.type=mysql
+relstore.type=mysql
 # db - database name
-datasource.db=erpnext
+relstore.db=erpnext
 # host - network connection to rdbs
-datasource.host=localhost
+relstore.host=localhost
 # port - network port to rdbs
-datasource.port=3306
+relstore.port=3306
 # user - database user
-datasource.user=graphbi
+relstore.user=graphbi
 # password - database user's password
-datasource.password=password
+relstore.password=graphbi
 # useSchema - true if schemata shall be supported (<schema>.<table>)
-datasource.useSchema=false
+relstore.useSchema=false
 # useDelimiter - true if delimiters for multi word columns shall be used
-datasource.useDelimiter=true
+relstore.useDelimiter=true
 
-#######################
-# Datasink definition #
-#######################
+##########################
+# Graph Store Definition #
+##########################
 
 # type - graph database identifier (neo4j)
-datasink.type=neo4j
+graphstore.type=neo4j
 # path - local path of the graphdb
-datasink.path=target/db
+graphstore.path=target/db
 # drop - True, if the db shall be removed before insert
-datasink.drop=true
+graphstore.drop=true
+
+####################################
+# Operation Graph Store Definition #
+####################################
+
+# type - graph database identifier (neo4j)
+opgraphstore.type=neo4j
+# path - local path of the graphdb
+opgraphstore.path=target/opgraph_db
+# drop - True, if the db shall be removed before insert
+opgraphstore.drop=true
