made generation of reference node configurable

--- a/src/main/resources/sakila-sample-config.properties
+++ b/src/main/resources/sakila-sample-config.properties
@@ -5,7 +5,7 @@
 # type - relational database system (rdbs) identifer (mysql, mssql)
 relstore.type=mysql
 # db - database name
-relstore.db=erpnext
+relstore.db=sakila
 # host - network connection to rdbs
 relstore.host=localhost
 # port - network port to rdbs
@@ -29,6 +29,8 @@ graphstore.type=neo4j
 graphstore.path=target/db
 # drop - True, if the db shall be removed before insert
 graphstore.drop=true
+# useReferenceNodes - True, if a reference node shall be created for each node class
+graphstore.useReferenceNode=false
 
 ####################################
 # Operation Graph Store Definition #
@@ -40,3 +42,5 @@ opgraphstore.type=neo4j
 opgraphstore.path=target/opgraph_db
 # drop - True, if the db shall be removed before insert
 opgraphstore.drop=true
+# useReferenceNodes - True, if a reference node shall be created for each node class
+graphstore.useReferenceNode=false
