--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -30,7 +30,7 @@ graphstore.path=target/db
 # drop - True, if the db shall be removed before insert
 graphstore.drop=true
 # useReferenceNodes - True, if a reference node shall be created for each node class
-graphstore.useReferenceNode=false
+graphstore.useReferenceNode=true
 
 ####################################
 # Operation Graph Store Definition #
@@ -43,4 +43,4 @@ opgraphstore.path=target/opgraph_db
 # drop - True, if the db shall be removed before insert
 opgraphstore.drop=true
 # useReferenceNodes - True, if a reference node shall be created for each node class
-graphstore.useReferenceNode=false
+graphstore.useReferenceNode=true
