renamed OperationGraph -> DocumentGraph

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -28,7 +28,7 @@ graphstore.type=neo4j
 # path - local path of the graphdb
 graphstore.path=target/db
 # drop - True, if the db shall be removed before insert
-graphstore.drop=true
+graphstore.drop=false
 # useReferenceNodes - True, if a reference node shall be created for each node class
 graphstore.useReferenceNode=false
 
