--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -26,9 +26,9 @@ relstore.useDelimiter=true
 # type - graph database identifier (neo4j)
 graphstore.type=neo4j
 # path - local path of the graphdb
-graphstore.path=target/db
+graphstore.path=target/test_db
 # drop - True, if the db shall be removed before insert
-graphstore.drop=true
+graphstore.drop=false
 # useReferenceNodes - True, if a reference node shall be created for each node class
 graphstore.useReferenceNode=true
 
@@ -39,8 +39,8 @@ graphstore.useReferenceNode=true
 # type - graph database identifier (neo4j)
 opgraphstore.type=neo4j
 # path - local path of the graphdb
-opgraphstore.path=target/opgraph_db
+opgraphstore.path=target/test_opgraph_db
 # drop - True, if the db shall be removed before insert
-opgraphstore.drop=true
+opgraphstore.drop=false
 # useReferenceNodes - True, if a reference node shall be created for each node class
 graphstore.useReferenceNode=true
