float cast for decimal values in rdb2iig transformation

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -7,11 +7,11 @@ relstore.type=mysql
 # db - database name
 relstore.db=erpnext
 # host - network connection to rdbs
-relstore.host=localhost
+relstore.host=139.18.13.65
 # port - network port to rdbs
 relstore.port=3306
 # user - database user
-relstore.user=graphbi
+relstore.user=biiig
 # password - database user's password
 relstore.password=graphbi
 # useSchema - true if schemata shall be supported (<schema>.<table>)
