--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<properties>
-		<neo4j-version>1.8.1</neo4j-version>
+		<neo4j-version>2.0.0-M06</neo4j-version>
 	</properties>
 
 
