moved src to Neo4j 2.0.0-M06

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -5,13 +5,13 @@
 # type - relational database system (rdbs) identifer (mysql, mssql)
 relstore.type=mysql
 # db - database name
-relstore.db=erpnext
+relstore.db=ERP
 # host - network connection to rdbs
-relstore.host=139.18.13.65
+relstore.host=localhost
 # port - network port to rdbs
 relstore.port=3306
 # user - database user
-relstore.user=biiig
+relstore.user=graphbi
 # password - database user's password
 relstore.password=graphbi
 # useSchema - true if schemata shall be supported (<schema>.<table>)
@@ -26,9 +26,9 @@ relstore.useDelimiter=true
 # type - graph database identifier (neo4j)
 graphstore.type=neo4j
 # path - local path of the graphdb
-graphstore.path=target/db
+graphstore.path=target/iig.db
 # drop - True, if the db shall be removed before insert
-graphstore.drop=true
+graphstore.drop=false
 # useReferenceNodes - True, if a reference node shall be created for each node class
 graphstore.useReferenceNode=false
 
@@ -39,7 +39,7 @@ graphstore.useReferenceNode=false
 # type - graph database identifier (neo4j)
 opgraphstore.type=neo4j
 # path - local path of the graphdb
-opgraphstore.path=target/opgraph_db
+opgraphstore.path=target/btg.db
 # drop - True, if the db shall be removed before insert
 opgraphstore.drop=true
 # useReferenceNodes - True, if a reference node shall be created for each node class
