--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<properties>
-		<neo4j-version>2.0.0-M06</neo4j-version>
+		<neo4j-version>2.0.1</neo4j-version>
 	</properties>
 
 
@@ -80,7 +80,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
-				<version>1.1</version>
+				<version>1.2.1</version>
 				<configuration>
 					<executable>java</executable>
 					<arguments>
